--- a/_posts/테스트.md
+++ b/_posts/테스트.md
@@ -1,2 +1,15 @@
+--- 
+layout: single
+classes: wide
+title: "테스트"
+header:
+  overlay_image: /img/page-bg.jpg
+excerpt: ' '
+author: "CYJ"
+header-style: text
+
+---  
+
+
 <a href="choijangwook://">실행</a>
 <a href="choijangwook://127.0.0.1:5900">실행</a>
